--- a/utils/model.ipynb
+++ b/utils/model.ipynb
@@ -2,11 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "import cv2\n",
     "import tensorflow\n",
+    "from sklearn.model_selection import train_test_split\n",
     "from tensorflow import keras\n",
     "from keras.models import Sequential\n",
     "from keras.layers import Dense, Dropout, Flatten, Conv2D, MaxPooling2D\n",
@@ -16,13 +19,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Ann_Model:\n",
     "\n",
-    "    def __init__(self, input_shape, output_classes , x_train, y_train, x_test, y_test, loss=\"categorical_crossentropy\", optimizer=\"Adam\", learning_rate = 0.001, metrics = \"accuracy\", cnn_layers = [32, 64], cnn_kernels = [(5,5), (3,3)], dense_layers = [128, 64], dropouts = [0.3, 0.5], activation = \"relu\", epochs = 10, batch_size = 32) -> None:\n",
+    "    def __init__(self, input_shape, output_classes , x_train, y_train, x_test, y_test, loss=\"categorical_crossentropy\", optimizer=\"Adam\", learning_rate = 0.001, metrics = [\"accuracy\"], cnn_layers = [128, 64], cnn_kernels = [(5,5), (3,3)], dense_layers = [128, 64], dropouts = [0.3, 0.5], activation = \"relu\", epochs = 1, batch_size = 32) -> None:\n",
     "        self.input = input\n",
     "        self.output_classes = output_classes\n",
     "        self.x_train = x_train\n",
@@ -53,7 +56,7 @@
     "\n",
     "        for dense_layer in range(len(self.dense_layers)):\n",
     "            model.add(Dense(self.dense_layers[dense_layer], activation=self.activation))\n",
-    "            model.add(Dropout(self.dropouts[0][dense_layer]))\n",
+    "            # model.add(Dropout(self.dropouts[0][dense_layer]))\n",
     "\n",
     "        model.add(Dense(self.output_classes, activation='softmax'))\n",
     "\n",
@@ -62,7 +65,7 @@
     "    def train_model(self, model):\n",
     "        loss = eval(\"keras.losses.\" + self.loss)\n",
     "        optimizer = eval(\"keras.optimizers.\"+self.optimizer + \"(learning_rate=\"+str(self.learning_rate)+\")\")\n",
-    "        model.compile(loss=loss, optimizer=optimizer, metrics = [self.metrics])\n",
+    "        model.compile(loss=loss, optimizer=optimizer, metrics = self.metrics)\n",
     "        model.fit(self.x_train, self.y_train,batch_size=self.batch_size,epochs=self.epochs,verbose=1,validation_data=(self.x_test, self.y_test))\n",
     "\n",
     "        model.save(\"digit_recognition.h5\")\n",
@@ -71,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +117,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_train = []\n",
+    "y_train = []\n",
+    "for i in range(10):\n",
+    "    for d in os.listdir(\"../assets/{}\".format(i)):\n",
+    "        t_img = cv2.imread(\"../assets/{}\".format(i)+\"/\"+d)\n",
+    "        t_img = cv2.cvtColor(t_img,cv2.COLOR_BGR2GRAY)\n",
+    "        x_train.append(t_img)\n",
+    "        y_train.append(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_train = np.array(x_train)\n",
+    "y_train = np.array(y_train)\n",
+    "x_train,x_test, y_train, y_test = train_test_split(x_train,y_train,test_size = 0.20, random_state= 21)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_train = x_train.reshape(x_train.shape[0], 28, 28, 1)\n",
+    "x_test = x_test.reshape(x_test.shape[0], 28, 28, 1)\n",
+    "\n",
+    "x_train = x_train.astype(\"float32\")/255\n",
+    "x_test = x_test.astype(\"float32\")/255\n",
+    "\n",
+    "y_train = keras.utils.to_categorical(y_train, 10)\n",
+    "y_test = keras.utils.to_categorical(y_test, 10)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -122,32 +168,39 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/10\n",
-      "1875/1875 [==============================] - 42s 21ms/step - loss: 0.2924 - accuracy: 0.9111 - val_loss: 0.0510 - val_accuracy: 0.9843\n",
+      "158/158 [==============================] - 14s 67ms/step - loss: 1.3721 - accuracy: 0.5136 - val_loss: 0.6852 - val_accuracy: 0.7706\n",
       "Epoch 2/10\n",
-      "1875/1875 [==============================] - 40s 22ms/step - loss: 0.0969 - accuracy: 0.9749 - val_loss: 0.0455 - val_accuracy: 0.9875\n",
+      "158/158 [==============================] - 10s 62ms/step - loss: 0.3990 - accuracy: 0.8770 - val_loss: 0.2467 - val_accuracy: 0.9222\n",
       "Epoch 3/10\n",
-      "1875/1875 [==============================] - 40s 21ms/step - loss: 0.0700 - accuracy: 0.9825 - val_loss: 0.0357 - val_accuracy: 0.9890\n",
+      "158/158 [==============================] - 9s 60ms/step - loss: 0.1550 - accuracy: 0.9532 - val_loss: 0.1823 - val_accuracy: 0.9381\n",
       "Epoch 4/10\n",
-      "1875/1875 [==============================] - 36s 19ms/step - loss: 0.0579 - accuracy: 0.9851 - val_loss: 0.0378 - val_accuracy: 0.9886\n",
+      "158/158 [==============================] - 10s 61ms/step - loss: 0.0815 - accuracy: 0.9770 - val_loss: 0.1822 - val_accuracy: 0.9484\n",
       "Epoch 5/10\n",
-      "1875/1875 [==============================] - 37s 20ms/step - loss: 0.0490 - accuracy: 0.9878 - val_loss: 0.0321 - val_accuracy: 0.9913\n",
+      "158/158 [==============================] - 10s 64ms/step - loss: 0.0640 - accuracy: 0.9811 - val_loss: 0.0854 - val_accuracy: 0.9770\n",
       "Epoch 6/10\n",
-      "1875/1875 [==============================] - 42s 23ms/step - loss: 0.0405 - accuracy: 0.9894 - val_loss: 0.0269 - val_accuracy: 0.9923\n",
+      "158/158 [==============================] - 10s 62ms/step - loss: 0.0381 - accuracy: 0.9887 - val_loss: 0.1005 - val_accuracy: 0.9683\n",
       "Epoch 7/10\n",
-      "1875/1875 [==============================] - 40s 21ms/step - loss: 0.0373 - accuracy: 0.9901 - val_loss: 0.0301 - val_accuracy: 0.9917\n",
+      "158/158 [==============================] - 10s 63ms/step - loss: 0.0129 - accuracy: 0.9972 - val_loss: 0.0781 - val_accuracy: 0.9770\n",
       "Epoch 8/10\n",
-      "1875/1875 [==============================] - 37s 20ms/step - loss: 0.0327 - accuracy: 0.9911 - val_loss: 0.0323 - val_accuracy: 0.9919\n",
+      "158/158 [==============================] - 10s 63ms/step - loss: 0.0127 - accuracy: 0.9982 - val_loss: 0.0579 - val_accuracy: 0.9817\n",
       "Epoch 9/10\n",
-      "1875/1875 [==============================] - 48s 26ms/step - loss: 0.0265 - accuracy: 0.9929 - val_loss: 0.0326 - val_accuracy: 0.9930\n",
+      "158/158 [==============================] - 10s 61ms/step - loss: 0.0377 - accuracy: 0.9885 - val_loss: 0.1297 - val_accuracy: 0.9579\n",
       "Epoch 10/10\n",
-      "1875/1875 [==============================] - 45s 24ms/step - loss: 0.0271 - accuracy: 0.9929 - val_loss: 0.0343 - val_accuracy: 0.9919\n"
+      "158/158 [==============================] - 10s 62ms/step - loss: 0.0196 - accuracy: 0.9952 - val_loss: 0.1059 - val_accuracy: 0.9754\n"
      ]
     }
    ],
    "source": [
-    "model = Ann_Model(input_shape=(), output_classes = 10, x_train=x_train, y_train=y_train, x_test=x_test, y_test=y_test)\n",
+    "model = Ann_Model(input_shape=(), output_classes = 10, x_train=x_train, y_train=y_train, x_test=x_test, y_test=y_test, epochs=10)\n",
     "model.model()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
